--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,11 @@
         <app-menu-component></app-menu-component>
     </div>
 
-
     <div class="my-5">
         <app-list-component></app-list-component>
+    </div>
+
+    <div>
+        <app-form-component></app-form-component>
     </div>
 </div>
