--- a/src/app/components/list-component/list-component.component.html
+++ b/src/app/components/list-component/list-component.component.html
@@ -4,14 +4,10 @@
     <div cdkDropListGroup class="box-list">
       <div class="p-4">
         <h2> {{agrupamento.lista}} 
-          <button  class="btn btn-outline" role="button" type="button" >
+          <button  class="btn btn-outline" role="button" type="button" (click)="openDialog()">
             <mat-icon>more_vert</mat-icon>
           </button>
         </h2>
-
-        <div class="d-grid gap-5">
-          <button class="btn btn-outline-danger" role="button" type="button" (click)="openDialog()"> + Adiconar tarefa</button>
-        </div>
 
         <div cdkDropList [cdkDropListData]="agrupamento.tasks"(cdkDropListDropped)="drop($event)"
           (id)="agrupamento.lista">
