--- a/src/app/components/menu-component/menu-component.component.html
+++ b/src/app/components/menu-component/menu-component.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark fixed-top">
+<nav class="navbar navbar-dark fixed-top " style="background-color: #D97E96; ">
     <div class="container-fluid">
         <a class="navbar-brand"> TAREFAS </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
@@ -6,38 +6,46 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-            aria-labelledby="offcanvasDarkNavbarLabel">
+            aria-labelledby="offcanvasDarkNavbarLabel"
+            style="background-color: #F2F2F2; border-radius: 10px 0px 0px 10px ;">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Lista de Tarefas</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                <button type="button" class="btn-close btn-close-danger" data-bs-dismiss="offcanvas"
                     aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                    <li class="nav-item m-2">
+                        <button type="button" class="btn btn-outline-danger" role="button" data-bs-dismiss="offcanvas"
+                            aria-label="Close" (click)="openDialog()">
+                            <span>Adicionar tarefa</span>
+                        </button>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                    <li class="nav-item m-2">
+                        <button type="button" class="btn btn-outline-danger" role="button" data-bs-dismiss="offcanvas"
+                            aria-label="Close" (click)="openDialog()">
+                            <span>Editar tarefa</span>
+                        </button>
+                    </li>
+                    <li class="nav-item m-2">
+                        <select class="form-select">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <button type="button" class="btn btn-outline-danger" role="button" data-bs-dismiss="offcanvas"
+                            aria-label="Close" (click)="openDialog()">
+                            <span>Excluir tarefa</span>
+                        </button>
                     </li>
                 </ul>
                 <form class="d-flex mt-3" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-success" type="submit">Search</button>
+                    <button class="btn btn-outline-danger" type="submit">Search</button>
                 </form>
             </div>
         </div>
