--- a/src/app/components/list-component/list-component.component.html
+++ b/src/app/components/list-component/list-component.component.html
@@ -1,18 +1,28 @@
 <div class="row g-4 justify-content-evenly m-5 ">
-  <div *ngFor="let agrupamento of agrupamentoTarefas" class="col-3">
+  <div *ngFor="let agrupamento of agrupamentoTarefas" class="col-3" style="min-width: 300px; max-width: fit-content;"> 
 
     <div cdkDropListGroup class="box-list">
       <div class="p-4">
-        <h2> {{agrupamento.lista}} 
-          <button  class="btn btn-outline" role="button" type="button" (click)="openDialog()">
-            <mat-icon>more_vert</mat-icon>
-          </button>
+        <h2> {{agrupamento.lista}}
+          <button class="btn btn-outline" type="button"
+            (click)="openDialog()"><mat-icon>add_circle_outline</mat-icon></button>
         </h2>
+        
+        <div  class="d-grid gap-2">
+          <button class="btn btn-outline-danger" type="button"
+            (click)="openDialog()"><mat-icon>add_circle_outline</mat-icon> Adicionar Tarefa </button>
+        </div>
 
-        <div cdkDropList [cdkDropListData]="agrupamento.tasks"(cdkDropListDropped)="drop($event)"
+        <div cdkDropList [cdkDropListData]="agrupamento.tasks" (cdkDropListDropped)="drop($event)"
           (id)="agrupamento.lista">
           <div class="box" *ngFor="let tarefa of agrupamento.tasks" cdkDrag>
             <mat-checkbox (click)="movetarefaDone(agrupamento, tarefa)">{{tarefa.nomeTarefa}}</mat-checkbox>
+            <button class="btn btn-outline" (click)="openDialogWithData(tarefa)">
+              <mat-icon>create</mat-icon>
+            </button>
+            <button class="btn btn-outline" (click)="excluir(tarefa.id)" id="liveAlertBtn">
+              <mat-icon>delete</mat-icon>
+            </button>
           </div>
         </div>
       </div>
@@ -24,6 +34,12 @@
           <div class="box" *ngFor="let dones of agrupamento.done" cdkDrag>
             <mat-checkbox (click)="movetarefaTodo(agrupamento, dones)"
               [(ngModel)]="dones.checked">{{dones.nomeTarefa}}</mat-checkbox>
+            <button class="btn btn-outline justify-content-md-end" (click)="openDialogWithData(dones)">
+              <mat-icon>create</mat-icon>
+            </button>
+            <button class="btn btn-outline justify-content-md-end" (click)="excluir(dones.id)">
+              <mat-icon>delete</mat-icon>
+            </button>
           </div>
         </div>
       </div>
