--- a/src/app/components/list-component/list-component.component.html
+++ b/src/app/components/list-component/list-component.component.html
@@ -1,4 +1,4 @@
-<div class="row g-4 m-5" style="display: flex;">
+<div class="row g-4 justify-content-evenly m-5">
   <div *ngFor="let agrupamento of agrupamentoTarefas" class="col-3" style="min-width: 300px; max-width: fit-content;">
 
     <div cdkDropListGroup class="box-list">
