--- a/src/app/components/menu-component/menu-component.component.html
+++ b/src/app/components/menu-component/menu-component.component.html
@@ -51,7 +51,7 @@
                     </li>
                     <li class="nav-item m-2">
                         <button type="button" class="btn btn-outline-danger" role="button" data-bs-dismiss="offcanvas"
-                            aria-label="Close" (click)="excluir(id)">
+                            aria-label="Close" (click)="openDialog(id)">
                             <mat-icon>delete</mat-icon>
                             <span class="m-2">Excluir tarefa</span>
                         </button>
