--- a/src/app/components/menu-component/menu-component.component.html
+++ b/src/app/components/menu-component/menu-component.component.html
@@ -20,6 +20,11 @@
                         <mat-icon>account_circle</mat-icon>
                     </a>
                     <ul class="dropdown-menu">
+                        <li class="dropdown-item" href="#"> <button type="button" class="btn btn-primary"
+                            role="button" data-bs-dismiss="offcanvas" aria-label="Close" (click)="cadastrar()">
+                            <mat-icon>add_circle_outline</mat-icon>
+                            Cadastrar
+                        </button></li>
                         <li class="dropdown-item" href="#"> <button type="button" class="btn btn-outline-primary"
                             role="button" data-bs-dismiss="offcanvas" aria-label="Close"
                                     (click)="OpenLogin()">
@@ -30,6 +35,7 @@
                                     <mat-icon>exit_to_app</mat-icon>
                                     Logout
                                 </button></li>
+               
                     </ul>
                 </div>
                 
